--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   platform: ^3.0.0
   supabase_flutter: ^1.2.0
   flutter_dotenv: ^5.0.2
+  onesignal_flutter: ^3.4.2
 
 dev_dependencies:
   flutter_test:
