--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,14 @@ dependencies:
     sdk: flutter
   flutter_stripe: ^7.0.0
   cupertino_icons: ^1.0.2
-  stripe_checkout: ^1.0.0
+  stripe_checkout: ^1.0.2
   pay: ^1.0.10
   http: ^0.13.1
   font_awesome_flutter: ^9.2.0
   platform: ^3.0.0
-  supabase_flutter: ^1.2.0
+  supabase_flutter: ^2.0.0-dev.2
   flutter_dotenv: ^5.0.2
-  onesignal_flutter: ^3.4.2
+  onesignal_flutter: ^5.0.3
 
 dev_dependencies:
   flutter_test:
